--- a/js/views/home.html
+++ b/js/views/home.html
@@ -1,9 +1,33 @@
-<div class="row">
-    <img class="col-xs-12 col-sm-4 cover-img" ng-src="{{artist.album.cover}}">
-    <div class="col-xs-12 col-sm-8">
-        <p>Artist: {{ artist.artist }}</p>
-        <p>Album: {{ artist.album.title }}</p>
-        <p>Genre: {{ artist.genre }}</p>
-        <div class="btn">More</div>
+<div ng-repeat="artist in artists">
+
+    <div class="row">
+
+        <img class="head-img img-responsive" ng-src="{{artist.header}}">
+
     </div>
+    <div class="row home__album">
+        <div class="home__album-details col col-md-7">
+            <div class="row">
+                <div class="col-xs-9">
+                    <h2>{{ artist.artist }}</h2>
+                    <h3>{{ artist.album.title }}</h3>
+                    <span class="home__date">{{ artist.album.release | date:"MMMM dd, yyyy" }}</span>
+                </div>
+                <div class="col-xs-3">
+                    <div class="home__rating"><p>{{ artist.album.rating }}</p></div>
+                </div>
+            </div>
+            <div class="row home__album-desc">
+                <p>{{artist.album.desc | limitTo:200}}...</p>
+            </div>
+
+            <a href="#/artists/{{$index}}">
+                <div class="btn">More</div>
+            </a>
+        </div>
+
+        <img class="col col-md-5 cover-img img-responsive" ng-src="{{artist.album.cover}}">
+
+    </div>
+
 </div>
