--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,27 @@
 @import url(https://fonts.googleapis.com/css?family=Codystar);
 @import url(https://fonts.googleapis.com/css?family=Offside);
+@import url(https://fonts.googleapis.com/css?family=Hind);
+@import url(https://fonts.googleapis.com/css?family=Work+Sans);
 *,
 *:before,
 *:after {
   box-sizing: inherit;
   font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Hind', sans-serif;
   color: #dadada;
   margin: 0;
   padding: 0;
   list-style: none;
+}
+
+img {
+  padding: 0 !important;
+  margin: 0 !important;
+}
+
+* {
+  margin: 0;
+  padding: 0;
 }
 
 html {
@@ -16,39 +29,94 @@ html {
 }
 
 body {
-  background: url("../images/bg1.jpg");
+  background: url("../images/bg2.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
 
-.container {
-  width: 960px;
-  margin-left: auto;
-  margin-right: auto;
+.main {
+  height: 100vh;
 }
 
 .main-title {
-  text-shadow: 0 0 30px #33FFFF;
+  text-shadow: 0 0 30px #00afe9;
   font-family: 'Codystar', cursive;
   font-family: 'Offside', cursive;
   color: #fafafa;
-  font-size: 100px;
+  font-size: 300px;
   text-align: center;
 }
 
+.sub {
+  width: 200px;
+  text-align: center;
+  margin: 0 auto;
+}
+
 .cover-img {
-  max-width: 220px;
+  max-width: 400px;
 }
 
 .home-display__album {
   background-color: rgba(0, 0, 0, 0.4);
   margin: 0 auto 40px auto;
-  padding: 20px;
   width: 60%;
 }
 .home-display__album .album-info {
   text-align: center;
   margin: 0 auto 0 auto;
+}
+
+.one {
+  stroke-dasharray: 1643.0728759765625;
+  stroke-dashoffset: 1643.0728759765625;
+  animation: dash 10s linear forwards;
+}
+
+.two {
+  stroke-dasharray: 1643.0728759765625;
+  stroke-dashoffset: 1643.0728759765625;
+  animation: dash 5s linear forwards;
+}
+
+@keyframes dash {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+.home__album {
+  border-bottom: 5px solid #00afe9;
+  background-color: #1c1c1c;
+  padding-left: 15px;
+}
+.home__album .home__album-details h2 {
+  font-size: 40px;
+  font-family: 'PT Serif', serif;
+  border-bottom: 2px solid #00afe9;
+  display: inline-block;
+  margin-top: 15px;
+}
+.home__album .home__album-details h3 {
+  font-size: 25px;
+  font-family: 'PT Serif', serif;
+  margin: 5px 0;
+}
+.home__album .home__album-details .home__date {
+  color: #00afe9;
+}
+.home__album .home__album-details .home__rating {
+  background-color: #00afe9;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  padding-top: 4px;
+  margin-right: 30px;
+  margin-top: 15px;
+}
+.home__album .home__album-details .home__rating p {
+  text-align: center;
+  font-size: 45px;
+  font-family: 'PT Serif', serif;
 }
 
 /*# sourceMappingURL=style.css.map */
