--- a/css/style.css
+++ b/css/style.css
@@ -14,14 +14,20 @@
   list-style: none;
 }
 
+.row {
+  margin-right: 0;
+  margin-left: 0;
+}
+
+.row > [class*='col-'] {
+  padding-right: 0;
+  padding-left: 0;
+}
+
 img {
   padding: 0 !important;
   margin: 0 !important;
-}
-
-* {
-  margin: 0;
-  padding: 0;
+  max-width: 400px;
 }
 
 html {
@@ -30,7 +36,7 @@ html {
 
 body {
   background: url("../images/bg2.jpg");
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-attachment: fixed;
 }
 
@@ -57,54 +63,27 @@ body {
   max-width: 400px;
 }
 
-.home-display__album {
-  background-color: rgba(0, 0, 0, 0.4);
-  margin: 0 auto 40px auto;
-  width: 60%;
-}
-.home-display__album .album-info {
-  text-align: center;
-  margin: 0 auto 0 auto;
-}
-
-.one {
-  stroke-dasharray: 1643.0728759765625;
-  stroke-dashoffset: 1643.0728759765625;
-  animation: dash 10s linear forwards;
-}
-
-.two {
-  stroke-dasharray: 1643.0728759765625;
-  stroke-dashoffset: 1643.0728759765625;
-  animation: dash 5s linear forwards;
-}
-
-@keyframes dash {
-  to {
-    stroke-dashoffset: 0;
-  }
-}
-.home__album {
+.home__display {
   border-bottom: 5px solid #00afe9;
   background-color: #1c1c1c;
   padding-left: 15px;
 }
-.home__album .home__album-details h2 {
+.home__display .home__display-details h2 {
   font-size: 40px;
   font-family: 'PT Serif', serif;
   border-bottom: 2px solid #00afe9;
   display: inline-block;
   margin-top: 15px;
 }
-.home__album .home__album-details h3 {
+.home__display .home__display-details h3 {
   font-size: 25px;
   font-family: 'PT Serif', serif;
   margin: 5px 0;
 }
-.home__album .home__album-details .home__date {
+.home__display .home__display-details .home__date {
   color: #00afe9;
 }
-.home__album .home__album-details .home__rating {
+.home__display .home__display-details .home__rating {
   background-color: #00afe9;
   width: 80px;
   height: 80px;
@@ -113,10 +92,81 @@ body {
   margin-right: 30px;
   margin-top: 15px;
 }
-.home__album .home__album-details .home__rating p {
+.home__display .home__display-details .home__rating p {
   text-align: center;
   font-size: 45px;
   font-family: 'PT Serif', serif;
+}
+
+.album__display {
+  border-bottom: 5px solid #00afe9;
+  background-color: #1c1c1c;
+  padding-left: 15px;
+}
+.album__display .album__display-details h2 {
+  font-size: 55px;
+  font-family: 'PT Serif', serif;
+  border-bottom: 2px solid #00afe9;
+  display: inline-block;
+  margin-top: 15px;
+}
+.album__display .album__display-details h3 {
+  font-size: 35px;
+  font-family: 'PT Serif', serif;
+  margin: 5px 0;
+}
+.album__display .album__display-details .album__date {
+  color: #00afe9;
+}
+.album__display .album__display-details .album__genre {
+  color: #00afe9;
+}
+.album__display .album__display-details .album__rating {
+  background-color: #00afe9;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  padding-top: 4px;
+  margin-right: 30px;
+  margin-top: 15px;
+}
+.album__display .album__display-details .album__rating p {
+  text-align: center;
+  font-size: 45px;
+  font-family: 'PT Serif', serif;
+}
+.album__display .album__display-desc {
+  margin-top: 15px;
+}
+.album__display .album__display-desc p {
+  font-size: 16px;
+  padding-right: 15px;
+}
+
+.container {
+  width: 1250px;
+  margin: 0 auto;
+}
+
+form * {
+  border: none;
+  color: #333;
+}
+form input {
+  width: 50%;
+  padding: 5px;
+  margin-bottom: 10px;
+}
+form input:nth-child(1) {
+  margin-right: 10px;
+}
+form input:focus {
+  outline: none;
+}
+form textarea {
+  resize: none;
+  width: 100%;
+  height: 60px;
 }
 
 /*# sourceMappingURL=style.css.map */
