--- a/sass/style.scss
+++ b/sass/style.scss
@@ -18,25 +18,30 @@ $slate: #1c1c1c;
     margin: 0;
     padding: 0;
     list-style: none;
-    
 }
+
+.row {
+  margin-right:0;
+  margin-left:0;
+}
+.row > [class*='col-'] {
+  padding-right:0;
+  padding-left:0;
+}
+
 img {
     padding: 0 !important;
    margin: 0 !important;
+   max-width: 400px;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-}
-        
 html {
     box-sizing: border-box;
 }
 
 body {
     background: url('../images/bg2.jpg');
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-attachment: fixed;
     
 }
@@ -72,43 +77,24 @@ body {
     max-width: 400px;
 }
 
-.home-display__album {
-    background-color: rgba(0,0,0,0.4);
-    margin: 0 auto 40px auto;
-    //padding: 20px;
-    width: 60%;
+// .home-display__album {
+//     background-color: rgba(0,0,0,0.4);
+//     margin: 0 auto 40px auto;
+//     //padding: 20px;
+//     width: 60%;
     
-    .album-info {
-        text-align: center;
-        margin: 0 auto 0 auto;
-    }
-}
+//     .album-info {
+//         text-align: center;
+//         margin: 0 auto 0 auto;
+//     }
+// }
 
-.one {
-  stroke-dasharray: 1643.0728759765625;
-  stroke-dashoffset: 1643.0728759765625;
-  animation: dash 10s linear forwards;
-}
-
-.two {
-  stroke-dasharray: 1643.0728759765625;
-  stroke-dashoffset: 1643.0728759765625;
-  animation: dash 5s linear forwards;
-}
-
-@keyframes dash {
-  to {
-    stroke-dashoffset: 0;
-  }
-}
-
-
-.home__album {
+.home__display {
     border-bottom: 5px solid $light-blue;
     background-color: $slate;
     padding-left: 15px;
     
-    .home__album-details {
+    .home__display-details {
         h2 {
             font-size: 40px;
             font-family: 'PT Serif', serif;
@@ -142,12 +128,99 @@ body {
         }
     }
     
-    .home__album-desc {
+    .home__display-desc {
         p {
             
         }
     }
 }
 
+.album__display {
+    border-bottom: 5px solid $light-blue;
+    background-color: $slate;
+    padding-left: 15px;
+    
+    .album__display-details {
+        h2 {
+            font-size: 55px;
+            font-family: 'PT Serif', serif;
+            border-bottom: 2px solid $light-blue;
+            display: inline-block;
+            margin-top: 15px;
+        }
+        h3 {
+            font-size: 35px;
+            font-family: 'PT Serif', serif;
+            margin: 5px 0;
+        }
+        
+        .album__date {
+            color: $light-blue;
+        }
+        
+        .album__genre {
+            color: $light-blue;
+        }
+        
+        .album__rating {
+            background-color: $light-blue;
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            padding-top: 4px;
+            margin-right: 30px;
+            margin-top: 15px;
+            p {
+                text-align: center;
+                font-size: 45px;
+                font-family: 'PT Serif', serif;
+            }
+        }
+    }
+    
+    .album__display-desc {
+        margin-top: 15px;
+        
+        p {
+            font-size: 16px;
+            padding-right: 15px;
+            
+        }
+    }
+}
 
+.container {
+    width: 1250px;
+    margin: 0 auto;
+}
 
+form {
+    * {
+        border: none;
+        //background-color: #f9f9f9;
+        color: #333;
+        
+    }
+    
+    input {
+        width: 50%;
+        padding: 5px;
+        margin-bottom: 10px;
+    }
+    
+    input:nth-child(1) {
+        margin-right: 10px;
+    }
+    
+    input:focus {
+        outline: none;
+    }
+    
+    textarea {
+        resize: none;
+        width: 100%;
+        height: 60px;
+    }
+    
+    
+}
